--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "sqlite3": "^5.0.0",
-    "uuid": "^8.3.2",
-    "wait-port": "^0.2.9"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
