--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,16 @@
 version: "3.7"
 services:
+  build:
+    image: node:lts-alpine
+    command: sh -c "npm ci --production && npm build"
+    working_dir: /app
+    volumes:
+      - ./:/app
   app:
     image: nginx:alpine
     ports:
       - 80:80
     volumes:
       - ./build:/usr/share/nginx/html:ro
+    depends_on:
+      - build
