--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   build:
     image: node:lts-alpine
-    command: sh -c "npm ci --production && npm build"
+    command: sh -c "npm ci --production && npm run build"
     working_dir: /app
     volumes:
       - ./:/app
