--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
