--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "serve": "^11.3.2"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
