Setup building custom image for production

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-PUBLIC_URL=/
-REACT_APP_API_URL=399335-paulcervov.tmweb.ru:4000
+PUBLIC_URL=http://399335-paulcervov.tmweb.ru
+REACT_APP_API_URL=http://399335-paulcervov.tmweb.ru:4000
